# protadjust

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
dnanexus-applet/protadjust/: Readme.developer.md  Readme.md  dxapp.json
dnanexus-applet/protadjust/src/: protadjust.sh
src/protadjust/: __init__.py  adjustment.py  cli.py  dataset.py  utils.py
tests/: conftest.py  test_adjustment.py
